chore: change config

--- a/_config.yml
+++ b/_config.yml
@@ -224,10 +224,10 @@ jekyll-archives:
     tag: /tags/:name/
     category: /categories/:name/
 
- # Conversion
- markdown: kramdown
- highlighter: rouge
- lsi: false
- excerpt_separator: "\n\n"
- incremental: false
+  # Conversion
+#  markdown: kramdown
+#  highlighter: rouge
+#  lsi: false
+#  excerpt_separator: "\n\n"
+#  incremental: false
 
